--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 Cython
-dataclasses
+dataclasses; python_version < '3.7'
 pymunge==0.1.3
-pyslurm @ git+https://github.com/PySlurm/pyslurm.git@467667e11e1775f9bd0be1e60444de6eb22e385b
